# http_server

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  server.py  workingled.txt
.cache/clangd/index/: FreeRTOS.h.1B215451B39296D5.idx  FreeRTOSConfig.h.CB18C9969B85E9FB.idx  FreeRTOSConfig.h.D93CB362E92EAA7B.idx  acd.c.3EBF56AD13899BEC.idx  acd.h.A636682E436C0ED9.idx  acd.h.E28E57858C62F0FA.idx  altcp.c.FFA7C4F4B0F3CA16.idx  altcp.h.AA5AC9034F2E03E3.idx  altcp_alloc.c.64864BF8E033BF5F.idx  altcp_tcp.c.3014DE0265E722B7.idx  api.h.22D401B5913EB965.idx  api_lib.c.0226207AF3A6E427.idx  api_msg.c.5E98D2FBA68A1538.idx  api_msg.h.BCD219287AB9B3D6.idx  arch.h.AA506BC8C5CA82C2.idx  autoip.c.6DBF171AA93824F8.idx  autoip.h.2651CD237598BFD9.idx  bridgeif.c.1AFD787A506FF2A3.idx  bridgeif.h.872F6978E4CF5DA3.idx  bridgeif_fdb.c.B34A1DD15C542D52.idx  bridgeif_opts.h.0D4982BE7B48458C.idx  cachel1_armv7.h.F5E2E7E902789FCF.idx  cc.h.FCF837A38921B5A5.idx  cmsis_compiler.h.A9DF5982F4F4AE27.idx  cmsis_gcc.h.EC717FDC6DA9645F.idx  cmsis_version.h.C4F34AE96202C403.idx  core_cm7.h.C0C8F4120EC3B053.idx  croutine.c.070626D4B92C8117.idx  croutine.h.B5856D466D24A233.idx  debug.h.611DF6D6EB367D20.idx  def.c.8EA56B6F7E5BDA1E.idx  def.h.DA0BBAE38F39EA45.idx  deprecated_definitions.h.D543D181D32C7075.idx  dhcp.c.F89CE5B2D8753AB3.idx  dhcp.h.D735D1CB927F646C.idx  dhcp6.h.D8B6418F3073C183.idx  dns.c.48F032FFEBC02851.idx  dns.h.60BA70BF880B8AC8.idx  err.c.533F019937933B75.idx  err.h.5646199CC284FBAA.idx  (+364 more)
app/: CMakeLists.txt
app/display/: main.cpp
app/server/: main.c
config/: FreeRTOSConfig.h  lwipopts.h  main.h
drivers/: CMakeLists.txt
drivers/ethernet/: ethernet.c  ethernet.h  ethernetif.c  ethernetif.h
drivers/ledcontrol/: ledcontrol.cpp  ledcontrol.h
drivers/motorcontrol/: motorcontrol.cpp  motorcontrol.h
lib/: CMakeLists.txt
linker/: STM32H753ZITx_FLASH.ld
tools/: arm-none-eabi-gcc.cmake  openocd.cfg
